--- a/serialization/serialization.csproj
+++ b/serialization/serialization.csproj
@@ -8,4 +8,15 @@
     </PropertyGroup>
 
 
+
+
+
+
+
+
+
+    <ItemGroup>
+      <PackageReference Include="Autofac" Version="7.1.0" />
+    </ItemGroup>
+
 </Project>
